# quickxorhash

./: .gitignore  COPYING  Makefile.am  README.md  cli.c  configure.ac  quickxorhash.c  quickxorhash.h  version.sh
packaging/pkgconfig/: quickxorhash.pc.in
packaging/rpm/: quickxorhash.spec.in
test/: Makefile.am  loremipsum.txt  test_qxh.py
